bcs-services/cluster-resources/pkg/resource/form/renderer/testdata/manifest/network/ep_complex.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ep-complex-w3uvctq3v3
  namespace: default
  labels:
    "label-key-1": "label-val-1"
  annotations:
    "anno-key-1": "anno-val-1"
    "io.tencent.bcs.editFormat": "form"
subsets:
  - addresses:
      - ip: 1.0.0.1
      - ip: 1.0.0.2
    ports:
      - name: web
        port: 8080
        protocol: TCP
      - name: abc
        port: 8090
        protocol: UDP
