bcs-services/cluster-resources/pkg/resource/form/renderer/testdata/manifest/network/svc_complex.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-complex-w3uvctq3v3
  namespace: default
  labels:
    "label-key-1": "label-val-1"
  annotations:
    "anno-key-1": "anno-val-1"
    "io.tencent.bcs.editFormat": "form"
spec:
  type: ClusterIP
  ports:
    - name: aaa
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: bbb
      port: 81
      protocol: TCP
      targetPort: 8081
    - name: ccc
      port: 82
      protocol: UDP
      targetPort: 8082
  selector:
    "select-123": "456"
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  externalIPs:
    - 2.2.2.2
    - 3.3.3.3
